# crypto-futures-arbitrage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.sample.json  vcpkg.json
include/common/: ConfigManager.hpp  Logger.hpp
include/core/: ArbitrageEngine.hpp  ITradeExecutor.hpp  OrderBook.hpp  PaperTrader.hpp
include/exchange/: BinanceFuturesClient.hpp  BybitFuturesClient.hpp  IExchangeClient.hpp
src/: main.cpp
src/common/: ConfigManager.cpp  Logger.cpp
src/core/: ArbitrageEngine.cpp  OrderBook.cpp  PaperTrader.cpp
src/exchange/: BinanceFuturesClient.cpp  BybitFuturesClient.cpp
